--- a/rtm-offer-page/styles/offer.css
+++ b/rtm-offer-page/styles/offer.css
@@ -132,6 +132,7 @@ body a:visited {
     display: grid;
     gap: 10px;
     min-height: 239px;
+    height: fit-content;
     grid-template-columns: 1fr 241px;
   }
 }
@@ -143,6 +144,7 @@ body a:visited {
 @media (min-width: 1200px) {
   .rtm__offer-blocks-group {
     min-height: 280px;
+    height: fit-content;
     grid-template-columns: 1fr 416px;
   }
 }
@@ -154,6 +156,7 @@ body a:visited {
 @media (min-width: 768px) {
   .rtm__offer-blocks-group--expanded {
     min-height: 300px;
+    height: fit-content;
   }
 }
 .rtm__offer-blocks-item {
@@ -162,6 +165,7 @@ body a:visited {
 }
 .rtm__offer-blocks-item--features {
   min-height: 163px;
+  height: fit-content;
   gap: 43px;
   width: 100%;
   border: 1px solid #B8B8B8;
@@ -172,6 +176,7 @@ body a:visited {
 @media (min-width: 768px) {
   .rtm__offer-blocks-item--features {
     min-height: 100%;
+    height: fit-content;
     padding: 40px 55px 40px 30px;
   }
 }
@@ -210,6 +215,7 @@ body a:visited {
   background: #FFF;
   padding: 0;
   min-height: 249px;
+  height: fit-content;
   overflow-x: auto;
 }
 @media (min-width: 768px) {
