--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -131,6 +131,7 @@ body {
           display: grid;
           gap: 10px;
           min-height: 239px;
+          height: fit-content;
           grid-template-columns: 1fr 241px;
         }
 
@@ -140,6 +141,7 @@ body {
 
         @include for-desktop-large {
           min-height: 280px;
+          height: fit-content;
           grid-template-columns: 1fr 416px;
         }
 
@@ -150,6 +152,7 @@ body {
         &--expanded {
           @include for-tablet {
             min-height: 300px;
+            height: fit-content;
           }
         }
       }
@@ -160,6 +163,7 @@ body {
 
         &--features {
           min-height: 163px;
+          height: fit-content;
           gap: 43px;
           width: 100%;
           border: 1px solid #B8B8B8;
@@ -169,6 +173,7 @@ body {
 
           @include for-tablet {
             min-height: 100%;
+            height: fit-content;
             padding: 40px 55px 40px 30px;
           }
 
@@ -205,6 +210,7 @@ body {
           background: #FFF;
           padding: 0;
           min-height: 249px;
+          height: fit-content;
           overflow-x: auto;
 
           @include for-tablet {
